[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Lennon Cook", email = "lvc@codetripping.net"},
]
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "advent-of-code-data",
    "python-dotenv",
    "more-itertools",
]
name = "advent of python"
description = "My solutions to Advent of Code 2021, in python"
license="MIT"#{file= "COPYING"}

